--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 items-center">
                     <div class="chart-container mx-auto">
                         <canvas id="ethicsDonutChart"></canvas>
-                        <p class="text-center mt-4 text-gray-600">This chart breaks down key areas of public and expert concern regarding the risks of advanced AI. Economic disruption and security threats represent the largest segments of perceived risk.</p>
+                        <p class="text-center mt-4 text-gray-600">This chart breaks down key areas of public and expert concern regarding the risks of advanced AI.</p>
                     </div>
                     <div class="space-y-6">
                         <div>
